@@ -1,3 +1,12 @@
+shmuel 18.02.2014 00:06:10 +0200 - build 291
+
+1. LuaFAR: в следующих функциях теперь допускается вместо таблицы FarColor передавать число:
+     - editor.AddColor
+     - far.AdvControl(ACTL_SETARRAYCOLOR)
+     - far.CreateUserControl
+     - диалоговые процедуры (DN_CTLCOLORDLGLIST,  DN_CTLCOLORDLGITEM, DN_CTLCOLORDIALOG)
+   Передача числа подразумевает стандартные 4-битные цвета (обрабатывается только младший байт числа).
+
 shmuel 16.02.2014 21:41:56 +0200 - build 290
 
 1. LuaFAR: far.RecursiveSearch принимает произвольное количество дополнительных аргументов.
